force-app/main/default/objects/Evidence_Redaction_Rule__mdt/Evidence_Redaction_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Evidence Redaction Rule</label>
    <pluralLabel>Evidence Redaction Rules</pluralLabel>
</CustomObject>