force-app/main/default/objects/Evidence_Redaction_Rule__mdt/fields/Applies_To_Console__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Console__c</fullName>
    <label>Applies To Console</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>