force-app/main/default/objects/Evidence_Redaction_Rule__mdt/fields/Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Field_Path__c</fullName>
    <label>Field Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>