force-app/main/default/objects/Evidence_Redaction_Rule__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Text</type>
    <length>80</length>
</CustomField>