force-app/main/default/objects/Evidence_Redaction_Rule__mdt/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <label>Rule Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>