force-app/main/default/objects/Evidence_Redaction_Rule__mdt/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <type>Text</type>
    <length>40</length>
</CustomField>